syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package com.paulmandal.atak.forwarder.protobufs;

option java_outer_classname = "ProtobufDetail";

import "minimal_contact.proto";
import "minimal_takv.proto";
import "minimal_underscore_group.proto";
import "minimal_track.proto";
import "minimal_remarks.proto";
import "minimal_complex_link.proto";
import "minimal_chat_link.proto";
import "minimal_freehand_link.proto";
import "minimal_chat.proto";
import "minimal_server_destination.proto";
import "minimal_model.proto";
import "minimal_detail_style.proto"; // TODO: rename this?
import "minimal_height.proto";
import "minimal_shape.proto";
import "minimal_drawn_shape.proto";
import "minimal_route.proto";

message MinimalDetail {
  MinimalContact contact = 1;
  MinimalTakv takv = 2;
  MinimalUnderscoreGroup group = 3;
  MinimalTrack track = 4;
  MinimalRemarks remarks = 5;
  MinimalComplexLink complexLink = 6;
  MinimalChatLink chatLink = 7;
  MinimalChat chat = 8;
  MinimalServerDestination serverDestination = 9;
  MinimalModel model = 10;
  MinimalDetailStyle detailStyle = 11;
  MinimalHeight height = 12;
  string iconSetPath = 13;
  MinimalShape shape = 14;
  MinimalDrawnShape drawnShape = 15;
  MinimalRoute route = 16;
  MinimalFreehandLink freehandLink = 17;
}
