syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package com.paulmandal.atak.forwarder.protobufs;

option java_outer_classname = "ProtobufDrawnShape";

import "minimal_shape_link.proto";

message MinimalDrawnShape {
  repeated MinimalShapeLink link = 1;
}
